--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+        <finalName>JenkinsWar</finalName>
+   </build>
 </project>
