--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,14 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
-	<dependencies>
+	<plugin>            
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-war-plugin</artifactId>
+              <configuration>
+                 <webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
+             </configuration>
+        </plugin>
+        <dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
