--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,17 @@
 	</dependencies>
 	<build>
            <finalName>mavencode</finalName>
+	   <plugins>
+
+	     <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>2.6</version>
+		<configuration>
+			<failOnMissingWebXml>false</failOnMissingWebXml>
+		</configuration>
+	     </plugin>
+
+          </plugins>
        </build>
 </project>
